# Molt

./: Cargo.toml
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs  target.rs
crates/ast/: Cargo.toml
crates/ast/src/: annotation.rs  expression.rs  lib.rs  literal.rs  operator.rs  statement.rs
crates/checker/: Cargo.toml
crates/checker/src/: context.rs  environment.rs  lib.rs
crates/common/src/: keywords.rs  lib.rs  literal.rs  molt_type.rs  operator.rs
crates/iast/: Cargo.toml
crates/iast/src/: effect.rs  expression.rs  statement.rs
crates/irgen/: Cargo.toml
crates/irgen/src/: lib.rs
crates/irgen/src/emitters/: expression.rs  function.rs  mod.rs  module.rs  statement.rs
crates/irgen/src/util/: mod.rs
crates/lexer/src/: cursor.rs  token.rs
crates/lexer/src/cursor/: mod.rs  token.rs
crates/lexer/tests/: lexer.rs
crates/lir/: Cargo.toml
crates/lir/src/: block.rs  expression.rs  lib.rs  module.rs  operator.rs  renderer.rs  statement.rs
crates/lirgen/: Cargo.toml
crates/lirgen/src/: builder.rs  environment.rs  lib.rs  var_name_gen.rs  variable.rs  variable_ref.rs
crates/molt/: Cargo.toml
crates/molt/src/: args.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: declaration.rs  expression.rs  loop.rs  statement.rs
crates/tcast/: Cargo.toml
crates/tcast/src/: effect.rs  expression.rs  fn_attribute.rs  lib.rs  statement.rs
ebnf/: expression.ebnf  program.ebnf
examples/: control_flow.molt  hello_world.molt  structs.molt  user_input.molt  variables.molt
(+8 files in other folders)
