[package]
name = "molt"
version = "0.1.0"
edition = "2021"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
checker = { path = "../checker" }
lirgen = { path = "../lirgen" }
irgen = { path = "../irgen" }
artifact = { path = "../artifact" }
clap = { version = "4.5.29", features = ["derive"] }
